# tokimo-app-computer-use

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  rustfmt.toml  tokimo-app.toml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  match_util.rs  types.rs
src/cli/: audio.rs  battery.rs  bluetooth.rs  element.rs  gpu.rs  keyboard.rs  mod.rs  mouse.rs  printer.rs  process.rs  registry.rs  scope.rs  screenshot.rs  service.rs  software.rs  startup.rs  system.rs  terminal.rs  usb.rs  wifi.rs  window.rs
src/daemon/: cache.rs  handler.rs  main.rs  mod.rs  protocol.rs  server.rs
src/platform/: mod.rs
src/platform/macos/: bluetooth.rs  elements.rs  input_source.rs  keyboard.rs  mod.rs  mouse.rs  process.rs  screenshot.rs  system_info.rs  terminal.rs  window.rs
src/platform/windows/: bluetooth.rs  keyboard.rs  mod.rs  mouse.rs  process.rs  registry.rs  service.rs  system_info.rs  terminal.rs  ui_object.rs  wnd.rs
src/platform/windows/elements/: find.rs  mod.rs  query.rs  source.rs  utils.rs
src/platform/windows/screenshot/: mod.rs  screen.rs  utils.rs
tests/: calculator_tests.rs  cli_e2e.rs  daemon_tests.rs  element_tests.rs  input_tests.rs  screenshot_tests.rs  window_tests.rs
