[package]
name = "tokimo-app-computer-use"
version = "0.1.0"
edition = "2024"

[lib]
name = "tokimo_app_computer_use"
crate-type = ["lib"]

[[bin]]
name = "tokimo-app-computer-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "tokimo-app-computer-use"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", features = ["png", "jpeg"] }
webp = "0.3"
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
tokimo-bus-client = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-cli = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_Globalization",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Devices_Bluetooth",
    "Win32_System_Services",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Foundation"
] }

[profile.release]
lto = true
strip = "symbols"
