[package]
name = "tokimo-app-computer-use"
version = "0.1.0"
edition = "2024"

[lib]
name = "tokimo_app_computer_use"
crate-type = ["lib"]

[[bin]]
name = "tokimo-app-computer-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "tokimo-app-computer-use"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", features = ["png", "jpeg"] }
webp = "0.3"
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
tokimo-bus-client = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-cli = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_Globalization",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Devices_Bluetooth",
    "Win32_System_Services",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Foundation"
] }

[target.'cfg(target_os = "macos")'.dependencies]
# libc (statvfs, getifaddrs, host_statistics64, proc_pidinfo)
libc = "0.2"

# Core Graphics (CGEvent for mouse/keyboard)
core-graphics = "0.25"

# ScreenCaptureKit (replaces deprecated CGDisplayCreateImage, CGWindowListCreateImage, CGWindowListCopyWindowInfo)
objc2-screen-capture-kit = { version = "0.3", features = ["SCShareableContent", "SCScreenshotManager", "SCStream"] }
objc2-core-graphics = "0.3"
core-foundation = "0.10"
core-foundation-sys = "0.8"

# Accessibility API (AXUIElement for UI automation, window manipulation)
accessibility = "0.2"
accessibility-sys = "0.2"

# Objective-C runtime (for NSWorkspace, NSRunningApplication)
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }

# Core Audio (volume control, device enumeration)
coreaudio-rs = "0.14"

# Foreign types (for CGImage::from_ptr)
foreign-types = "0.5"

# IOKit (hardware enumeration, battery, USB, GPU)
io-kit-sys = "0.5"

# BLE scanning via CoreBluetooth
btleplug = "0.12"
tokio = { version = "1", features = ["rt", "time"] }

[profile.release]
lto = true
strip = "symbols"
